k8s/custom-error-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          volumeMounts:
            - name: error-pages
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
      volumes:
        - name: error-pages
          configMap:
            name: custom-error-pages
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages-svc
spec:
  selector:
    app: error-pages
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 30001
