k8s/nextjs-adminchannel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wealth-admin-channel-ingress

  labels:
    service_type: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://adminchannel-wealth-dev2-eks.se.scb.co.th"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For,X-Forwarded-Host,X-Forwarded-Proto,X-Real-IP,Accept,Origin,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length, Content-Range"
    nginx.ingress.kubernetes.io/cors-max-age: "1728000"

spec:
  rules:
    - host: adminchannel-wealth-dev2-eks.se.scb.co.th # admin-portal-wealth-dev.se.scb.co.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-portal
                port:
                  number: 3001
